--- a/css/main.css
+++ b/css/main.css
@@ -1,13 +1,14 @@
 #wrap {
   width: 100%;
 }
+
 #main {
   width: 100%;
   height: 100vh;
-  background-color: rgb(205, 231, 255);
+  background-color: #f2f7ff;
   /* background: url(../main.png) no-repeat 0 0; */
 }
-#main .in_main {
+#main .main_in {
   margin: 0 auto;
   width: 1500px;
   height: 100vh;
@@ -18,13 +19,6 @@
 #main .header {
   width: 100%;
   height: 120px;
-}
-#main .logo {
-  float: left;
-  margin: 20px 0 0 0;
-  width: 180px;
-  height: 80px;
-  color: #716e64;
 }
 #main .nav {
   float: right;
@@ -37,59 +31,264 @@
 #main .nav a {
   font-size: 20px;
   font-weight: 600;
-  color: #716e64;
+  color: #5558bb;
 }
 #main .nav li.on a {
   color: #000;
 }
 
-#main h2 {
+#main .name1 {
   width: 100%;
-  font-size: 80px;
+  font-size: 70px;
   box-sizing: border-box;
   position: absolute;
-  top: 420px;
-  left: 250px;
-  color: transparent;
-  -webkit-text-stroke: 2px #000;
-  font-weight: bold;
-  padding: 30px;
-}
+  top: 270px;
+  left: 270px;
+  color: #f16e16;
 
+  /* color: transparent;
+  -webkit-text-stroke: 2px #000; 
+  font-weight: bold; 
+   padding: 30px;  */
+}
+#main .name2 {
+  width: 300px;
+  height: 70px;
+  font-size: 35px;
+  box-sizing: border-box;
+  position: absolute;
+  top: 700px;
+  left: 700px;
+  color: #f16e16;
+
+
+
+  /* color: transparent;
+  -webkit-text-stroke: 2px #000; 
+  font-weight: bold; 
+   padding: 30px;  */
+}
 #main .mainimg {
-  float: left;
-  margin-top: 50px;
+  margin: 0 auto;
+  width: 450px;
+  margin-top: 160px;
   padding-left: 100px;
 }
 
-/* 프로필 */
+/* About_me */
+
 #About_me {
   width: 100%;
   height: 100vh;
-  background-color: rgb(219, 205, 255);
+  background-color: #f2f7ff;
 }
-#About_me .inAbout_me {
+#About_me .About_me_in {
   margin: 0 auto;
   width: 1500px;
   height: 100vh;
   position: relative;
 }
-#About_me h1 {
-  text-align: center;
-  width: 100%;
-  font-size: 50px;
-  padding-top: 50px;
+
+#About_me .About_me_h .About_ttl {
+  float: right;
+  padding-right: 300px;
+  font-size: 65px;
+  font-weight: bold;
+  line-height: 200px;
+  text-shadow: 3px 2px 0px #5558bb;
+  color: #f16e16;
 }
-#About_me .Aboutimg {
+#About_me img {
+  float: left;
+  margin-top: 230px;
+  margin-left: 200px;
+  border-radius: 10px;
+}
+#About_me .box1 {
+  position: absolute;
+  top: 200px;
+  left: 800px;
   float: right;
   width: 400px;
   height: 400px;
-  border-radius: 70%;
-  overflow: hidden;
-  margin-right: 100px;
+  border-radius: 10px;
+  background-color: #ffffff;
 }
-#About_me .Aboutimg img {
+
+/* skill */
+
+#skill {
   width: 100%;
-  height: 100%;
-  object-fit: cover;
+  height: 100vh;
+  background-color: #f2f7ff;
+}
+#skill_in {
+  margin: 0 auto;
+  width: 1500px;
+  height: 100vh;
+}
+#skill .skill_h {
+  width: 100%;
+  height: 200px;
+}
+#skill .skill_h .ttl {
+  padding-top: 120px;
+  text-align: center;
+  font-size: 65px;
+  font-weight: bold;
+  text-shadow: 3px 2px 0px #5558bb;
+  color: #f16e16;
+}
+
+.skills {
+  width: 100%;
+  max-width: 600px;
+  padding: 0 20px;
+  margin: 0 auto;
+  margin-top: 100px;
+}
+.skill-name {
+  font-size: 18px;
+  font-weight: 700;
+  text-transform: uppercase;
+  margin: 20px 0;
+}
+.skill-bar {
+  height: 20px;
+  background: #5558bb;
+  border-radius: 8px;
+}
+.skill-per {
+  height: 20px;
+  background-color: #84a2ea;
+  border-radius: 8px;
+  transition: 1s linear;
+  position: relative;
+}
+.skill-per::before {
+  content: attr(per);
+  position: absolute;
+  padding: 4px 6px;
+  background-color: #000;
+  color: #fff;
+  font-size: 12px;
+  border-radius: 4px;
+  top: -35px;
+  right: 0;
+  transform: translateX(50%);
+}
+.skill-per::after {
+  content: "";
+  position: absolute;
+  width: 10px;
+  height: 10px;
+  background-color: cadetblue;
+  top: -16px;
+  right: 0;
+  transform: translateX(50%) rotate(45deg);
+  border-radius: 2px;
+}
+
+/* Project */
+#Project1 {
+  width: 100%;
+  height: 100vh;
+  background-color: #f2f7ff;
+}
+#Project1 .Project1_in {
+  margin: 0 auto;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+}
+#Project1 .Project1_ttl {
+  font-size: 200px;
+  color: #5558bb;
+  opacity: 0.2;
+}
+
+/* finish */
+#Project2 {
+  width: 100%;
+  height: 100vh;
+  background-color: #f2f7ff;
+}
+#Project2 .Project2_ttl {
+  padding-top: 120px;
+  text-align: center;
+  font-size: 65px;
+  font-weight: bold;
+  text-shadow: 3px 2px 0px #5558bb;
+  color: #f16e16;
+}
+
+
+/* 이메일 */
+#e-mail {
+  width: 100%;
+  height: 100vh;
+  background-color: #f2f7ff;
+}
+
+#e-mail .e-mail_ttl {
+  padding-top: 200px;
+  font-size: 65px;
+  font-weight: bold;
+  text-align: center;
+  text-shadow: 3px 2px 0px #5558bb;
+  color: #f16e16;
+}
+ .field {
+   margin-bottom: 10px;
+ }
+
+ .field label {
+   display: block;
+   font-size: 12px;
+   color: #777;
+ }
+
+ .field input {
+   display: block;
+   min-width: 250px;
+   line-height: 1.5;
+   font-size: 14px;
+ }
+
+ input[type="submit"] {
+   display: block;
+   padding: 6px 30px;
+   font-size: 14px;
+   background-color: #4460AA;
+   color: #fff;
+   border: none
+ }
+
+/* 리모컨 */
+#q_mn {
+  position: absolute;
+  right: 20px;
+  top: 300px;
+  z-index: 9999;
+  width: 120px;
+  height: 200px;
+  border-radius: 10px;
+  border: 1px solid #5558bb;
+  background-color: #fff;
+}
+#q_mn ul.nav {
+  margin: 0 auto;
+  margin-top: 30px;
+  list-style: none;
+  width: 50px;
+}
+#q_mn ul.nav li {
+  margin-bottom: 10px;
+}
+#q_mn ul.nav li a {
+  color: #5558bb;
+}
+#q_mn ul.nav li.on a {
+  color: rgb(15, 15, 15);
 }
