--- a/css/reset.css
+++ b/css/reset.css
@@ -1,24 +1,25 @@
 * {
-    margin: 0;
-    padding: 0;
-  }
-  
-  body {
-    font-family: 맑은고딕;
-    font-size: 12px;
-    color: #000;
-  }
-  
-  ul,
-  li {
-    list-style: none;
-  }
-  
-  a {
-    text-decoration: none;
-    color: #000;
-  }
-  
-  img {
-    border: 0;
-  }
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: "poppins" sans-serif;
+  font-size: 12px;
+  color: #000;
+}
+
+ul,
+li {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+  color: #000;
+}
+
+img {
+  border: 0;
+}
