--- a/css/main.css
+++ b/css/main.css
@@ -44,7 +44,7 @@
   position: absolute;
   top: 270px;
   left: 270px;
-  color: #f16e16;
+  color: #f15016;
 
   /* color: transparent;
   -webkit-text-stroke: 2px #000; 
@@ -58,8 +58,8 @@
   box-sizing: border-box;
   position: absolute;
   top: 700px;
-  left: 700px;
-  color: #f16e16;
+  left: 1100px;
+  color: #f15016;
 
 
 
@@ -89,31 +89,50 @@
   position: relative;
 }
 
-#About_me .About_me_h .About_ttl {
+#About_me .About_ttl {
   float: right;
-  padding-right: 300px;
+  padding-right: 160px;
   font-size: 65px;
   font-weight: bold;
   line-height: 200px;
   text-shadow: 3px 2px 0px #5558bb;
-  color: #f16e16;
+  color: #f15016;
+}
+#About_me .About_txt{
+  position: absolute;
+  top: 250px;
+  left: 750px;
+  font-size: 30px;
+  
 }
 #About_me img {
   float: left;
-  margin-top: 230px;
-  margin-left: 200px;
-  border-radius: 10px;
+  margin-top: 190px;
+  margin-left: 100px;
+  border-radius: 50%;
 }
 #About_me .box1 {
   position: absolute;
-  top: 200px;
-  left: 800px;
+  top: 500px;
+  left: 700px;
   float: right;
-  width: 400px;
-  height: 400px;
+  width: 700px;
+  height: 250px;
   border-radius: 10px;
   background-color: #ffffff;
 }
+#About_me .github{
+  width: 100px;
+  height: 100px;
+
+}
+#About_me .velog{
+  float: left;
+    width: 100px;
+    height: 100px;
+}
+
+
 
 /* skill */
 
@@ -137,7 +156,7 @@
   font-size: 65px;
   font-weight: bold;
   text-shadow: 3px 2px 0px #5558bb;
-  color: #f16e16;
+  color: #f15016;
 }
 
 .skills {
@@ -199,14 +218,63 @@
   margin: 0 auto;
   width: 100%;
   height: 100vh;
-  display: flex;
   align-items: center;
+  background-color: #84a2ea(234, 234, 234);
 }
-#Project1 .Project1_ttl {
+/* #Project1 .Project1_ttl {
   font-size: 200px;
   color: #5558bb;
   opacity: 0.2;
+} */
+#Project1 .Project1_in .txt_box{
+  float: left;
+  width: 500px;
+  height: 500px;
+  margin-top: 150px;
+  margin-left: 400px;
 }
+
+#Project1 .txt_box .txt1 {
+  padding-top: 80px;
+  padding-left: 50px;
+  font-size: 40px;
+}
+#Project1 .txt_box .txt2 {
+  font-size: 20px;
+  padding-top: 20px;
+  padding-left: 50px;
+}
+
+#Project1 #monitor_box{
+  float: right;
+  width: 800px;
+  height: 800px; 
+  position: relative;
+
+}
+
+#monitor_box .box{
+  width:  600px;
+  height: 560px;
+  margin-top: 150px;
+  background-color: #5558bb;
+}
+#monitor_box .box img{
+  width: 900px;
+  position: absolute;
+  top: 80px;
+  right: 50px;
+
+}
+#monitor_box p{
+  color: #f15016;
+  position: absolute;
+  top: 645px;
+  left: 275px;
+  font-size:70px;
+
+}
+
 
 /* finish */
 #Project2 {
@@ -222,6 +290,77 @@
   text-shadow: 3px 2px 0px #5558bb;
   color: #f16e16;
 }
+/* Project */
+#Project2 {
+  width: 100%;
+  height: 100vh;
+  background-color: #f2f7ff;
+}
+
+#Project2 .Project1_in {
+  margin: 0 auto;
+  width: 100%;
+  height: 100vh;
+  align-items: center;
+  background-color: #84a2ea(234, 234, 234);
+}
+
+/* #Project2 .Project1_ttl {
+  font-size: 200px;
+  color: #5558bb;
+  opacity: 0.2;
+} */
+#Project2 .Project2_in .txt_box {
+  float: left;
+  width: 500px;
+  height: 500px;
+  margin-top: 150px;
+  margin-left: 400px;
+}
+
+#Project2 .txt_box .txt1 {
+  padding-top: 80px;
+  padding-left: 50px;
+  font-size: 40px;
+}
+
+#Project2 .txt_box .txt2 {
+  font-size: 20px;
+  padding-top: 20px;
+  padding-left: 50px;
+}
+
+#Project2 #monitor_box {
+  float: right;
+  width: 800px;
+  height: 800px;
+  position: relative;
+
+}
+
+#monitor_box .box {
+  width: 600px;
+  height: 560px;
+  margin-top: 150px;
+  background-color: #5558bb;
+}
+
+#monitor_box .box img {
+  width: 900px;
+  position: absolute;
+  top: 80px;
+  right: 50px;
+
+}
+
+#monitor_box p {
+  color: #f15016;
+  position: absolute;
+  top: 645px;
+  left: 275px;
+  font-size: 70px;
+
+}
 
 
 /* 이메일 */
@@ -233,23 +372,33 @@
 
 #e-mail .e-mail_ttl {
   padding-top: 200px;
-  font-size: 65px;
+  font-size: 60px;
   font-weight: bold;
   text-align: center;
+  padding-bottom: 100px;
   text-shadow: 3px 2px 0px #5558bb;
   color: #f16e16;
 }
+#form {
+  width: 251px;
+  height: 400px;
+  margin: 0 auto;
+
+}
  .field {
    margin-bottom: 10px;
+   
  }
 
  .field label {
+  
    display: block;
    font-size: 12px;
    color: #777;
  }
 
  .field input {
+  margin: 0 auto;
    display: block;
    min-width: 250px;
    line-height: 1.5;
@@ -258,8 +407,10 @@
 
  input[type="submit"] {
    display: block;
+    margin: 0 auto;
    padding: 6px 30px;
    font-size: 14px;
+   margin-top: 15px;
    background-color: #4460AA;
    color: #fff;
    border: none
@@ -275,7 +426,6 @@
   height: 200px;
   border-radius: 10px;
   border: 1px solid #5558bb;
-  background-color: #fff;
 }
 #q_mn ul.nav {
   margin: 0 auto;
