--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,6 @@
   width: 1500px;
   height: 100vh;
   position: relative;
-
   /* background-color:rgba(255, 244, 146, 0.5); */
 }
 #main .header {
@@ -32,18 +31,31 @@
   font-size: 20px;
   font-weight: 600;
   color: #5558bb;
+  display: inline-block;
+  margin: 0;
+  text-transform: uppercase;
 }
-#main .nav li.on a {
-  color: #000;
+#main .nav a:after {
+  display: block;
+  content: "";
+  border-bottom: solid 5px #ea2129;
+  transform: scaleX(0);
+  transition: transform 250ms ease-in-out;
 }
+#main .nav a:hover:after {
+  transform: scaleX(1);
+}
+/* #main .nav a:after {
+  transform-origin: 0% 50%;
+} */
 
 #main .name1 {
   width: 100%;
-  font-size: 70px;
+  font-size: 80px;
   box-sizing: border-box;
   position: absolute;
   top: 270px;
-  left: 270px;
+  left: 180px;
   color: #f15016;
 
   /* color: transparent;
@@ -51,28 +63,62 @@
   font-weight: bold; 
    padding: 30px;  */
 }
+@keyframes fadeInLeft {
+  0% {
+    opacity: 0;
+    transform: translate3d(-100%, 0, 0);
+  }
+  to {
+    opacity: 1;
+    transform: translateZ(0);
+  }
+}
+
+.name1 {
+  position: relative;
+  animation: fadeInLeft 1.1s;
+}
+@keyframes fadeInRight {
+  0% {
+    opacity: 0;
+    transform: translate3d(100%, 0, 0);
+  }
+  to {
+    opacity: 1;
+    transform: translateZ(0);
+  }
+}
+
 #main .name2 {
   width: 300px;
   height: 70px;
-  font-size: 35px;
+  font-size: 30px;
   box-sizing: border-box;
   position: absolute;
-  top: 700px;
-  left: 1100px;
+  top: 730px;
+  left: 760px;
   color: #f15016;
 
-
-
   /* color: transparent;
-  -webkit-text-stroke: 2px #000; 
-  font-weight: bold; 
-   padding: 30px;  */
+  -webkit-text-stroke: 2px rgb(255, 119, 119);
+  font-weight: bold;
+  padding: 30px; */
 }
+.name2 {
+  position: relative;
+  animation: fadeInRight 1.1s;
+}
+
 #main .mainimg {
   margin: 0 auto;
   width: 450px;
   margin-top: 160px;
-  padding-left: 100px;
+}
+
+#main > nav > li > a.act {
+  display: block;
+  background-color: turquoise;
+  color: #fff;
 }
 
 /* About_me */
@@ -80,7 +126,7 @@
 #About_me {
   width: 100%;
   height: 100vh;
-  background-color: #f2f7ff;
+  background-color: #ffffff;
 }
 #About_me .About_me_in {
   margin: 0 auto;
@@ -90,26 +136,43 @@
 }
 
 #About_me .About_ttl {
-  float: right;
-  padding-right: 160px;
+  text-align: center;
   font-size: 65px;
   font-weight: bold;
   line-height: 200px;
   text-shadow: 3px 2px 0px #5558bb;
   color: #f15016;
+  transition: all 1s;
 }
-#About_me .About_txt{
+#About_me .About_box {
   position: absolute;
-  top: 250px;
-  left: 750px;
-  font-size: 30px;
-  
+  top: 350px;
+  left: 800px;
+  width: 300px;
+  height: 300px;
+}
+#About_me .About_txt1 {
+  float: left;
+  width: 100px;
+  height: 200px;
+  font-size: 16px;
+  font-weight: 800;
+  color: #4460aa;
+  line-height: 40px;
+  padding-left: 20px;
+}
+#About_me .About_txt2 {
+  float: left;
+  width: 200px;
+  height: 200px;
+  font-size: 16px;
+  line-height: 40px;
 }
 #About_me img {
   float: left;
-  margin-top: 190px;
-  margin-left: 100px;
-  border-radius: 50%;
+  margin-top: 60px;
+  margin-left: 350px;
+  border-radius: 20px;
 }
 #About_me .box1 {
   position: absolute;
@@ -121,18 +184,15 @@
   border-radius: 10px;
   background-color: #ffffff;
 }
-#About_me .github{
+#About_me .github {
   width: 100px;
   height: 100px;
-
 }
-#About_me .velog{
+#About_me .velog {
   float: left;
-    width: 100px;
-    height: 100px;
+  width: 100px;
+  height: 100px;
 }
-
-
 
 /* skill */
 
@@ -226,7 +286,7 @@
   color: #5558bb;
   opacity: 0.2;
 } */
-#Project1 .Project1_in .txt_box{
+#Project1 .Project1_in .txt_box {
   float: left;
   width: 500px;
   height: 500px;
@@ -245,36 +305,32 @@
   padding-left: 50px;
 }
 
-#Project1 #monitor_box{
+#Project1 #monitor_box {
   float: right;
   width: 800px;
-  height: 800px; 
+  height: 800px;
   position: relative;
-
 }
 
-#monitor_box .box{
-  width:  600px;
+#monitor_box .box {
+  width: 600px;
   height: 560px;
   margin-top: 150px;
   background-color: #5558bb;
 }
-#monitor_box .box img{
+#monitor_box .box img {
   width: 900px;
   position: absolute;
   top: 80px;
   right: 50px;
-
 }
-#monitor_box p{
+#monitor_box p {
   color: #f15016;
   position: absolute;
   top: 645px;
   left: 275px;
-  font-size:70px;
-
+  font-size: 70px;
 }
-
 
 /* finish */
 #Project2 {
@@ -335,7 +391,6 @@
   width: 800px;
   height: 800px;
   position: relative;
-
 }
 
 #monitor_box .box {
@@ -350,7 +405,6 @@
   position: absolute;
   top: 80px;
   right: 50px;
-
 }
 
 #monitor_box p {
@@ -359,62 +413,156 @@
   top: 645px;
   left: 275px;
   font-size: 70px;
-
 }
-
 
 /* 이메일 */
 #e-mail {
   width: 100%;
   height: 100vh;
   background-color: #f2f7ff;
+  padding-top: 200px;
 }
 
 #e-mail .e-mail_ttl {
-  padding-top: 200px;
+  margin: 0 auto;
+  width: 500px;
+  height: 100px;
+  margin-bottom: 80px;
+  /* padding-top: 200px;
   font-size: 60px;
   font-weight: bold;
   text-align: center;
   padding-bottom: 100px;
-  text-shadow: 3px 2px 0px #5558bb;
-  color: #f16e16;
+  text-shadow: 3px 2px 0px #5558bb; */
+}
+h1 {
+  height: 100px;
+}
+
+h1 span {
+  position: relative;
+  top: 20px;
+  display: inline-block;
+  animation: bounce 0.3s ease infinite alternate;
+  font-family: "Titan One", cursive;
+  font-size: 60px;
+  color: #5558bb;
+  text-shadow: 0 1px 0 rgb(204, 204, 204), 0 2px 0 #ccc, 0 3px 0 #ccc,
+    0 4px 0 #ccc, 0 5px 0 #ccc, 0 6px 0 transparent, 0 7px 0 transparent,
+    0 8px 0 transparent, 0 9px 0 transparent, 0 10px 10px rgba(0, 0, 0, 0.4);
+}
+h1 span:nth-child(1) {
+  padding-left: 30px;
+}
+h1 span:nth-child(2) {
+  animation-delay: 0.1s;
+}
+h1 span:nth-child(3) {
+  animation-delay: 0.2s;
+}
+h1 span:nth-child(4) {
+  animation-delay: 0.3s;
+}
+h1 span:nth-child(5) {
+  animation-delay: 0.4s;
+}
+h1 span:nth-child(6) {
+  animation-delay: 0.5s;
+}
+h1 span:nth-child(7) {
+  animation-delay: 0.6s;
+}
+h1 span:nth-child(8) {
+  animation-delay: 0.6s;
+}
+h1 span:nth-child(9) {
+  animation-delay: 0.7s;
+}
+h1 span:nth-child(10) {
+  animation-delay: 0.9s;
+}
+h1 span:nth-child(11) {
+  animation-delay: 0.1s;
+}
+
+@keyframes bounce {
+  100% {
+    top: -20px;
+    text-shadow: 0 1px 0 #ccc, 0 2px 0 #ccc, 0 3px 0 #ccc, 0 4px 0 #ccc,
+      0 5px 0 #ccc, 0 6px 0 #ccc, 0 7px 0 #ccc, 0 8px 0 #ccc, 0 9px 0 #ccc,
+      0 50px 25px rgba(0, 0, 0, 0.2);
+  }
+}
+
+h1 span:nth-child(2) {
+  animation-delay: 0.1s;
+}
+h1 span:nth-child(3) {
+  animation-delay: 0.2s;
+}
+h1 span:nth-child(4) {
+  animation-delay: 0.3s;
+}
+h1 span:nth-child(5) {
+  animation-delay: 0.4s;
+}
+h1 span:nth-child(6) {
+  animation-delay: 0.5s;
+}
+h1 span:nth-child(7) {
+  animation-delay: 0.6s;
+}
+h1 span:nth-child(8) {
+  animation-delay: 0.7s;
+}
+h1 span:nth-child(9) {
+  animation-delay: 0.8s;
+}
+
+@keyframes bounce {
+  100% {
+    top: -20px;
+    text-shadow: 0 1px 0 #ccc, 0 2px 0 #ccc, 0 3px 0 #ccc, 0 4px 0 #ccc,
+      0 5px 0 #ccc, 0 6px 0 #ccc, 0 7px 0 #ccc, 0 8px 0 #ccc, 0 9px 0 #ccc,
+      0 50px 25px rgba(0, 0, 0, 0.2);
+  }
 }
 #form {
   width: 251px;
   height: 400px;
   margin: 0 auto;
-
 }
- .field {
-   margin-bottom: 10px;
-   
- }
+.field {
+  margin-bottom: 10px;
+}
 
- .field label {
-  
-   display: block;
-   font-size: 12px;
-   color: #777;
- }
+.field label {
+  display: block;
+  font-size: 13px;
+  color: #777;
+}
 
- .field input {
+.field input {
   margin: 0 auto;
-   display: block;
-   min-width: 250px;
-   line-height: 1.5;
-   font-size: 14px;
- }
+  display: block;
+  min-width: 250px;
+  line-height: 1.5;
+  font-size: 14px;
+  border-radius: 20px;
+  border: 1px solid rgb(134, 134, 134);
+}
 
- input[type="submit"] {
-   display: block;
-    margin: 0 auto;
-   padding: 6px 30px;
-   font-size: 14px;
-   margin-top: 15px;
-   background-color: #4460AA;
-   color: #fff;
-   border: none
- }
+input[type="submit"] {
+  display: block;
+  margin: 0 auto;
+  padding: 6px 30px;
+  font-size: 14px;
+  margin-top: 30px;
+  background-color: #4460aa;
+  border-radius: 20px;
+  color: #fff;
+  border: none;
+}
 
 /* 리모컨 */
 #q_mn {
@@ -422,22 +570,26 @@
   right: 20px;
   top: 300px;
   z-index: 9999;
-  width: 120px;
+  width: 110px;
   height: 200px;
   border-radius: 10px;
   border: 1px solid #5558bb;
 }
 #q_mn ul.nav {
   margin: 0 auto;
-  margin-top: 30px;
+  margin-top: 22px;
   list-style: none;
   width: 50px;
 }
 #q_mn ul.nav li {
   margin-bottom: 10px;
 }
+#q_mn ul.nav li a:hover {
+  color: #f15016;
+}
 #q_mn ul.nav li a {
   color: #5558bb;
+  font-size: 13px;
 }
 #q_mn ul.nav li.on a {
   color: rgb(15, 15, 15);
