--- a/css/reset.css
+++ b/css/reset.css
@@ -2,10 +2,15 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Noto Sans KR", sans-serif;
 }
+/* @font-face {
+  font-family: "dutch";
+  src: url(../font/Dutch\ 801\ Bold\ BT.ttf);
+} */
+@import url("https://fonts.googleapis.com/css2?family=Merriweather:wght@700&family=Noto+Sans+KR:wght@300&family=Playfair+Display:wght@400;500;600;800;900&display=swap");
 
 body {
-  font-family: "poppins" sans-serif;
   font-size: 12px;
   color: #000;
 }
