--- a/css/main.css
+++ b/css/main.css
@@ -54,19 +54,18 @@ body {
   margin-right: 50px;
 }
 #main .nav a {
-  font-size: 20px;
+  font-size: 22px;
   font-weight: 600;
   color: #5558bb;
   display: inline-block;
   margin: 0;
   text-transform: uppercase;
   font-family: "DM Serif Display", serif;
-  font-weight: 500;
 }
 #main .nav a:after {
   display: block;
   content: "";
-  border-bottom: solid 3px #de5e3b;
+  border-bottom: solid 4px #f15016;
   transform: scaleX(0);
   transition: transform 250ms ease-in-out;
 }
@@ -79,7 +78,7 @@ body {
 
 #main .name1 {
   width: 100%;
-  font-size: 90px;
+  font-size: 110px;
   box-sizing: border-box;
   position: absolute;
   top: 290px;
@@ -87,9 +86,8 @@ body {
   color: #f15016;
   /*#de5e3b;  */
   font-family: "DM Serif Display", serif;
-font-weight: bold;
   line-height: 150px;
-  text-shadow: 3px 2px 0px #434c9b;
+  text-shadow: 3px -1px 0px #434c9b;
   /* color: transparent;
   -webkit-text-stroke: 2px #000; 
   font-weight: bold; 
@@ -123,13 +121,14 @@ font-weight: bold;
 
 #main .name2 {
   width: 300px;
-  height: 70px;
+  height: 80px;
   font-size: 30px;
   box-sizing: border-box;
   position: absolute;
   top: 730px;
   left: 780px;
   color: #f15016;
+  /* text-shadow: 3px -1px 0px #434c9b; */
   font-family: "DM Serif Display", serif;
 
   /* color: transparent;
@@ -161,48 +160,47 @@ font-weight: bold;
   width: 100%;
   height: 100vh;
   background-color: #f2f7ff;
-
+  /* background-color: #F7F2EE; */
 }
 #About_me .About_me_in {
   margin: 0 auto;
   width: 1500px;
   height: 932px;
+  padding-top: 30px;
   position: relative;
 }
 
 #About_me .About_ttl {
   margin: 0 auto;
-  width: 300px;
+  width: 400px;
   text-align: center;
-  font-size: 65px;
+  font-size: 80px;
   font-weight: bold;
   line-height: 150px;
   text-shadow: 3px 2px 0px #434c9b;
-  color: #de5e3b;
+  color: #f15016;
   transition: all 1s;
   font-family: "DM Serif Display", serif;
 }
 #About_me .About_box {
   position: absolute;
-  top: 400px;
-  left: 750px;
-  width: 400px;
-  height: 350px;
-  border-radius: 20px;
-  background-color: rgb(255, 255, 255,0.7);
+  top: 420px;
+  left: 550px;
+  width: 350px;
+  height: 300px;
+  border-radius: 50%;
+  margin-left: 110px;
 }
 #About_me .About_txt1 {
   float: left;
-  width: 150px;
+  width: 100px;
   height: 200px;
   padding-top: 60px;
-  padding-left: 100px;
-  font-size: 16px;
+  font-size: 17px;
   font-weight: 800;
   color: #434c9b;
   line-height: 40px;
-  padding-left: 70px;
-  
+  padding-left: 20px;
 }
 #About_me .About_txt2 {
   float: left;
@@ -214,19 +212,19 @@ font-weight: bold;
 }
 #About_me img {
   float: left;
-  margin-top: 100px;
-  margin-left: 400px;
-  border-radius: 20px;
-
+  margin-top: 0px;
+  margin-left: 0px;
+  border-radius: 50%;
+  width: 1500px;
 }
-#About_me .box1 {
+/* #About_me .box1 {
   position: absolute;
   top: 500px;
   left: 700px;
   float: right;
   width: 700px;
   height: 250px;
-  border-radius: 10px;
+  border-radius: 50%;
   background-color: #ffffff;
 }
 #About_me .github {
@@ -237,6 +235,34 @@ font-weight: bold;
   float: left;
   width: 100px;
   height: 100px;
+} */
+
+/* about 2 */
+#About_me .About_box2 {
+  position: absolute;
+  top: 400px;
+  right: 115px;
+  width: 350px;
+  height: 400px;
+}
+#About_me .About_txt3 {
+  font-size: 22px;
+  color: #434c9b;
+  font-weight: 800;
+  margin-bottom: 10px;
+}
+#About_me .About_txt4 {
+  font-size: 16px;
+  margin-bottom: 40px;
+}
+#About_me .About_txt5 {
+  font-size: 22px;
+  font-weight: 800;
+  color: #434c9b;
+  margin-bottom: 10px;
+}
+#About_me .About_txt6 {
+  font-size: 16px;
 }
 
 /* skill */
@@ -250,74 +276,87 @@ font-weight: bold;
   margin: 0 auto;
   width: 1500px;
   height: 932px;
+  padding-top: 30px;
+  position: relative;
 }
-#skill .skill_img {
-  width: 500px;
-  height: 100px;
-  padding-top: 25px;
-  padding-left: 40px;
-  margin-top: 80px;
-  margin-left: 350px;
-  border: 1px solid #ccc;
-  border-radius: 30px;
-}
-#skill .skill_img img {
-  width: 70px;
-  padding-right: 20px;
-  cursor: pointer;
-}
+
 #skill .skill_h {
   width: 100%;
   height: 200px;
 }
-#skill .skill_h .ttl {
-  padding-top: 30px;
+#skill .ttl {
+  margin: 0 auto;
+  width: 400px;
   text-align: center;
-  font-size: 65px;
+  font-size: 80px;
   font-weight: bold;
+  line-height: 150px;
   text-shadow: 3px 2px 0px #434c9b;
-  line-height: 70px;
-  color: #de5e3b;
+  color: #f15016;
+  transition: all 1s;
   font-family: "DM Serif Display", serif;
-  /* 이거다 */
 }
 
 #skill .skill_txt {
   float: right;
-  width: 700px;
+  width: 650px;
   height: 200px;
-  margin-top: 50px;
-  margin-right: 200px;
+  margin-top: 130px;
+  margin-right: 230px;
   color: #fff;
-  cursor: pointer;
   position: relative;
 }
 
 .skill_txt ul {
-  width: 700px;
+  width: 650px;
   height: 70px;
   display: flex;
   justify-content: space-around;
   font-weight: 800;
 }
+.skill_txt li {
+  width: 90px;
+  height: 70px;
+  font-size: 17px;
+  background-color: #434c9b;
+  line-height: 70px;
+  text-align: center;
+  border-radius: 5px;
+  cursor: pointer;
+  font-family: "DM Serif Display", serif;
+}
+.skill_txt li:hover {
+  color: #d85626;
+  transition: all 0.3s;
+}
+@keyframes fadeInDown {
+  0% {
+    opacity: 0;
+    transform: translate3d(0, -100%, 0);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateZ(0);
+  }
+}
 
 .skill_txt > div {
   width: 100%;
-  height: 240px;
+  height: 200px;
   position: absolute;
   top: 70px;
   left: 0;
   line-height: 70px;
   /* background-color: #ebeae9;
   border: 1px solid #ccc; */
-
   border-radius: 10px;
-  background-color: rgb(255, 255, 255,0.6);
+  background-color: rgb(247, 242, 238, 0.5);
 }
 .skill_txt > div > p {
   position: relative;
   animation: fadeInDown 1s;
-  font-size: 16px;
+  font-size: 15px;
   font-weight: 500;
   color: #000;
   text-align: center;
@@ -344,31 +383,6 @@ font-weight: bold;
 #wrapper > div.con6 {
   z-index: 100;
 }
-.skill_txt li {
-  width: 90px;
-  height: 70px;
-  font-size: 17px;
-  background-color: #434c9b;
-  line-height: 70px;
-  text-align: center;
-  border-radius: 5px;
-  font-family: "DM Serif Display", serif;
-}
-.skill_txt li:hover {
-  color: #d85626;
-  transition: all 0.3s;
-}
-@keyframes fadeInDown {
-  0% {
-    opacity: 0;
-    transform: translate3d(0, -100%, 0);
-  }
-
-  to {
-    opacity: 1;
-    transform: translateZ(0);
-  }
-}
 
 .skill_txt .box4 {
   float: left;
@@ -387,7 +401,7 @@ font-weight: bold;
   justify-content: center;
   align-items: center;
   margin-left: 300px;
-  margin-top: 50px;
+  margin-top: 100px;
 }
 #skill .skill_list {
 }
@@ -400,7 +414,6 @@ font-weight: bold;
   width: 50px;
   height: 300px;
   border: 1px solid #ccc;
-
   position: relative;
   overflow: hidden;
   border-radius: 3px;
@@ -410,15 +423,48 @@ font-weight: bold;
   height: 300px;
   background-color: #434c9b;
   position: absolute;
+  font-size: 14px;
   color: #fff;
   top: 300px;
   left: 0;
 }
 #skill .skill_list h5 {
-  font-size: 16px;
+  font-size: 18px;
   text-align: center;
   cursor: pointer;
-  font-family: "DM Serif Display", serif;
+}
+/* more */
+#skill .skill_img {
+  width: 500px;
+  height: 150px;
+  border: 1px solid #ccc;
+  border-radius: 20px;
+  padding-top: 50px;
+  padding-left: 40px;
+  margin-top: 80px;
+  margin-left: 350px;
+}
+#skill .skill_img img {
+  width: 70px;
+  padding-right: 20px;
+  cursor: pointer;
+  position: relative;
+  opacity: 0;
+}
+
+#more {
+  width: 100px;
+  height: 50px;
+  position: absolute;
+  bottom: 200px;
+  left: 400px;
+  text-align: center;
+  color: #434c9b;
+  background-color: #f2f7ff;
+}
+#more p {
+  font-size: 30px;
+  font-weight: 800;
 }
 
 /* Project1 */
@@ -438,16 +484,13 @@ font-weight: bold;
   position: relative;
   top: 0;
   left: 0;
-  z-index:10;
+  z-index: 10;
   float: left;
   width: 500px;
   height: 500px;
-  margin-top: 170px;
+  margin-top: 200px;
   margin-left: 350px;
   background-color: #fff;
- 
-  
-
 }
 
 #Project1 .txt1 {
@@ -465,7 +508,7 @@ font-weight: bold;
   font-family: "DM Serif Display", serif;
 }
 #Project1 .txt3 {
-  font-size: 20px;
+  font-size: 18px;
   padding-left: 50px;
   margin-bottom: 50px;
 }
@@ -475,7 +518,7 @@ font-weight: bold;
   margin-left: 50px;
 }
 #circle_box p {
-  font-size: 20px;
+  font-size: 22px;
   padding-bottom: 20px;
   font-weight: 500;
   font-family: "DM Serif Display", serif;
@@ -485,7 +528,7 @@ font-weight: bold;
   width: 30px;
   height: 30px;
   border-radius: 50%;
-  margin-right: 5px;
+  margin-right: 6px;
   background-color: #323333;
   border: 1px solid #ccc;
 }
@@ -494,7 +537,7 @@ font-weight: bold;
   width: 30px;
   height: 30px;
   border-radius: 50%;
-  margin-right: 5px;
+  margin-right: 6px;
   background-color: #fefcf2;
   border: 1px solid #ccc;
 }
@@ -550,6 +593,8 @@ font-weight: bold;
   width: 800px;
   height: 800px;
   position: relative;
+  margin-right: 10px;
+  margin-top: 30px;
 }
 
 #monitor_box .box {
@@ -703,7 +748,6 @@ font-weight: bold;
   top: 0;
 }
 
-
 .flow-text {
   position: absolute;
   top: 200px;
@@ -716,16 +760,13 @@ font-weight: bold;
   font-weight: 500;
   font-size: 200px;
   color: #5558bb;
-  
 }
 
 .flow-wrap {
   animation: textLoop 20s linear infinite;
   padding-right: 1.4881vw;
   font-family: "DM Serif Display", serif;
-  z-index: -1;
 }
-
 
 @keyframes textLoop {
   0% {
@@ -760,7 +801,7 @@ font-weight: bold;
   float: left;
   width: 500px;
   height: 500px;
-  margin-top: 170px;
+  margin-top: 200px;
   margin-left: 350px;
   background-color: #fff;
 }
@@ -780,7 +821,7 @@ font-weight: bold;
   font-family: "DM Serif Display", serif;
 }
 #Project2 .txt3 {
-  font-size: 20px;
+  font-size: 18px;
   padding-left: 50px;
   margin-bottom: 50px;
 }
@@ -790,7 +831,7 @@ font-weight: bold;
   margin-left: 50px;
 }
 #circle_box2 p {
-  font-size: 20px;
+  font-size: 22px;
   padding-bottom: 20px;
   font-weight: 500;
   font-family: "DM Serif Display", serif;
@@ -800,7 +841,7 @@ font-weight: bold;
   width: 30px;
   height: 30px;
   border-radius: 50%;
-  margin-right: 5px;
+  margin-right: 6px;
   background-color: #000000;
   border: 1px solid #ccc;
 }
@@ -809,7 +850,7 @@ font-weight: bold;
   width: 30px;
   height: 30px;
   border-radius: 50%;
-  margin-right: 5px;
+  margin-right: 6px;
   background-color: #f1f1f1;
   border: 1px solid #ccc;
 }
@@ -1054,8 +1095,7 @@ font-weight: bold;
   padding-right: 1.4881vw;
   font-family: "DM Serif Display", serif;
 }
-
-@keyframes textLoop {
+s @keyframes textLoop {
   0% {
     -webkit-transform: translate3d(0, 0, 0);
     transform: translate3d(0, 0, 0);
